# demo

./: CMakeLists.txt  README  README.md
cmake/: checks.cmake  utest.cmake  utils.cmake
http/: CMakeLists.txt  README.ru
http/client/: CMakeLists.txt  http.cpp  http.h  http_client.cpp
http/test/: CMakeLists.txt  ut_http.cpp
test/: CMakeLists.txt  test_io.cpp  test_io.h
utils/: CMakeLists.txt  exception.cpp  exception.h  file_handle.cpp  file_handle.h  generic_io.cpp  generic_io.h  logger.h  socket.cpp  socket.h
